<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:background="#000000" android:layout_width="-1" android:layout_height="-1">
    <TextView android:textSize="35sp" android:gravity="11" android:id="@id/textView4" android:layout_width="-1" android:layout_height="-2" android:text="Edit offer" style="@style/page_title_style" />
    <LinearLayout android:layout_width="-1" android:layout_height="15dp" />
    <TextView android:textSize="25sp" android:gravity="11" android:id="@id/textView4" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="10dp" android:text="Edit Contact" style="@style/page_title_style" />
    <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2">
        <ImageView android:gravity="11" android:layout_gravity="1" android:id="@id/imageView1" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginLeft="120dp" android:layout_marginRight="120dp" android:src="@drawable/camera_icon" android:scaleType="7" />
    </LinearLayout>
    <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2">
        <TextView android:textSize="15sp" android:gravity="11" android:layout_gravity="11" android:id="@id/textView1" android:layout_width="-1" android:layout_height="20dp" android:text="@string/contact_logo" style="@style/page_title_style" />
    </LinearLayout>
    <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="50dp">
        <EditText android:gravity="33" android:id="@id/editText11" android:layout_width="250dp" android:layout_height="50dp" android:layout_marginLeft="20dp" android:hint="@string/contact_name_default" android:inputType="2001">
            <requestFocus />
        </EditText>
        <ImageButton android:id="@id/imageButton1" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="10dp" android:layout_marginRight="20dp" android:src="@drawable/search" android:scaleType="1" />
    </LinearLayout>
    <LinearLayout android:layout_width="-1" android:layout_height="50dp">
        <EditText android:gravity="33" android:id="@id/editText13" android:layout_width="250dp" android:layout_height="50dp" android:layout_marginLeft="20dp" android:hint="@string/contact_email_default" />
        <ImageButton android:id="@id/imageButton2" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="10dp" android:layout_marginRight="20dp" android:src="@drawable/search" android:scaleType="1" />
    </LinearLayout>
    <LinearLayout android:layout_width="-1" android:layout_height="50dp" android:layout_weight="0.72">
        <EditText android:gravity="33" android:id="@id/editText14" android:layout_width="250dp" android:layout_height="50dp" android:layout_marginLeft="20dp" android:hint="@string/contact_tel_default" />
    </LinearLayout>
    <LinearLayout android:layout_width="-1" android:layout_height="16dp" />
    <LinearLayout android:layout_width="-1" android:layout_height="-2" android:layout_weight="0.72">
        <Button android:textSize="25sp" android:textColor="#ff9900" android:id="@id/button1" android:background="@drawable/button_shape" android:layout_width="60dp" android:layout_height="70dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="Back" android:layout_weight="0.11" />
        <Button android:textSize="25sp" android:textColor="#ff9900" android:id="@id/button2" android:background="@drawable/button_shape" android:layout_width="60dp" android:layout_height="70dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="Edit" android:layout_weight="0.11" />
    </LinearLayout>
</LinearLayout>
