<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:background="#000000" android:layout_width="-1" android:layout_height="-1">
    <TextView android:textSize="35sp" android:gravity="11" android:id="@id/textView4" android:layout_width="-1" android:layout_height="-2" android:text="Edit offer" style="@style/page_title_style" />
    <LinearLayout android:layout_width="-1" android:layout_height="5dp" android:layout_weight="0.72" />
    <TextView android:textSize="25sp" android:gravity="11" android:id="@id/textView4" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="10dp" android:text="Edit Product" style="@style/page_title_style" />
    <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2">
        <EditText android:id="@id/editText1" android:layout_width="250dp" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginRight="10dp" android:hint="@string/product_name_default" android:inputType="2001">
            <requestFocus />
        </EditText>
        <ImageButton android:id="@id/imageButton1" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="10dp" android:layout_marginRight="20dp" android:src="@drawable/search" android:scaleType="1" />
    </LinearLayout>
    <LinearLayout android:layout_width="-1" android:layout_height="2dp" android:layout_weight="0.72" />
    <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2">
        <ImageView android:gravity="11" android:layout_gravity="1" android:id="@id/imageView1" android:layout_width="120dp" android:layout_height="120dp" android:layout_marginLeft="120dp" android:layout_marginRight="120dp" android:src="@drawable/camera_icon" android:scaleType="1" />
    </LinearLayout>
    <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2">
        <TextView android:textSize="15sp" android:gravity="11" android:layout_gravity="11" android:id="@id/textView1" android:layout_width="-1" android:layout_height="20dp" android:text="@string/take_photo" style="@style/page_title_style" />
    </LinearLayout>
    <LinearLayout android:layout_width="-1" android:layout_height="2dp" android:layout_weight="0.72" />
    <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2">
        <EditText android:gravity="33" android:id="@id/editText4" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:hint="@string/product_description_default" android:lines="3" android:inputType="4001" />
    </LinearLayout>
    <LinearLayout android:layout_width="-1" android:layout_height="10dp" android:layout_weight="0.72" />
    <LinearLayout android:layout_width="-1" android:layout_height="-2" android:layout_weight="0.72">
        <Button android:textSize="25sp" android:textColor="#ff9900" android:id="@id/button1" android:background="@drawable/button_shape" android:layout_width="60dp" android:layout_height="70dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="Back" android:layout_weight="0.11" />
        <Button android:textSize="25sp" android:textColor="#ff9900" android:id="@id/button2" android:background="@drawable/button_shape" android:layout_width="60dp" android:layout_height="70dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="Edit" android:layout_weight="0.11" />
    </LinearLayout>
</LinearLayout>
