<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:background="#000000" android:layout_width="-1" android:layout_height="-1">
    <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="3000000" android:id="@id/ScrollView1" android:scrollbars="200" android:layout_width="-1" android:layout_height="-1" android:isScrollContainer="true" android:overScrollMode="0">
        <LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-2">
            <TextView android:textSize="35sp" android:gravity="11" android:id="@id/textView4" android:layout_width="-1" android:layout_height="-2" android:text="Make an offer" style="@style/page_title_style" />
            <LinearLayout android:layout_width="-1" android:layout_height="5dp" />
            <TextView android:textSize="25sp" android:gravity="11" android:id="@id/textView4" android:layout_width="-1" android:layout_height="-2" android:layout_marginBottom="10dp" android:text="Select Contact" style="@style/page_title_style" />
            <LinearLayout android:orientation="0" android:layout_width="-2" android:layout_height="-2">
                <ImageView android:gravity="11" android:layout_gravity="1" android:id="@id/imageView1" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginLeft="120dp" android:layout_marginRight="120dp" android:src="@drawable/camera_icon" android:scaleType="1" />
            </LinearLayout>
            <TextView android:textSize="20sp" android:gravity="3" android:id="@id/textViewSelectExisting" android:layout_width="252dp" android:layout_height="-2" android:layout_marginLeft="20dp" android:text="Select an existing contact:" style="@style/page_title_style" />
            <LinearLayout android:orientation="0" android:layout_width="250dp" android:layout_height="50dp">
                <Spinner android:id="@id/spinner1" android:layout_width="251dp" android:layout_height="50dp" android:layout_marginLeft="20dp" android:layout_marginRight="10dp" />
            </LinearLayout>
            <TextView android:textSize="20sp" android:gravity="3" android:id="@id/textViewCreateNew" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="20dp" android:layout_marginBottom="10dp" android:text="(Or) Create a new contact:" style="@style/page_title_style" />
            <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="50dp">
                <EditText android:textColorHint="#ffffff" android:gravity="33" android:id="@id/editText11" android:layout_width="250dp" android:layout_height="50dp" android:layout_marginLeft="20dp" android:hint="@string/contact_name_default" android:inputType="2001" />
                <ImageButton android:id="@id/imageButton1" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="10dp" android:layout_marginRight="20dp" android:src="@drawable/search" android:scaleType="1" />
            </LinearLayout>
            <LinearLayout android:layout_width="-1" android:layout_height="50dp">
                <EditText android:textColorHint="#ffffff" android:gravity="33" android:id="@id/editText13" android:layout_width="250dp" android:layout_height="50dp" android:layout_marginLeft="20dp" android:hint="@string/contact_email_default" android:inputType="21" />
                <ImageButton android:id="@id/imageButton2" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginLeft="10dp" android:layout_marginRight="20dp" android:src="@drawable/search" android:scaleType="1" />
            </LinearLayout>
            <LinearLayout android:layout_width="-1" android:layout_height="50dp" android:layout_weight="0.72">
                <EditText android:textColorHint="#ffffff" android:gravity="33" android:id="@id/editText14" android:layout_width="250dp" android:layout_height="50dp" android:layout_marginLeft="20dp" android:hint="@string/contact_tel_default" android:inputType="3" />
            </LinearLayout>
            <LinearLayout android:layout_width="-1" android:layout_height="16dp" />
            <LinearLayout android:layout_width="-1" android:layout_height="207dp" android:layout_weight="0.42">
                <Button android:textSize="25sp" android:textColor="#ff9900" android:id="@id/button1" android:background="@drawable/button_shape" android:layout_width="60dp" android:layout_height="70dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="Back" android:layout_weight="0.11" />
                <Button android:textSize="25sp" android:textColor="#ff9900" android:id="@id/button2" android:background="@drawable/button_shape" android:layout_width="60dp" android:layout_height="70dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="Next" android:layout_weight="0.11" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
